<resources>
    <string name="add_new_rider">Add new rider</string>
    <string name="app_name">Trials Scorekeeper</string>
    <string name="enter_value_prompt">Enter a value</string>
    <string name="lap_score">%1$d / %2$d</string>
    <string name="lap_score_label">Lap score: %1$d / %2$d</string>
    <string name="rider_label">Rider</string>
    <string name="scores_label">Scores</string>
    <string name="clear_button">Clear</string>
    <string name="rider_name_req">Rider Name *</string>
    <string name="save_action">Save</string>
    <string name="rider_class_req">Rider Class *</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="import_riders">Import Riders</string>
    <string name="configure_event">Settings</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_rider_scores">Clear rider scores</string>
    <string name="edit_rider_info">Edit rider info</string>
    <string name="standing_label">#</string>
    <string name="back_action">Back</string>
    <string name="more_actions">More actions</string>
    <string name="export_results">Export results</string>
    <string name="delete_confirm">Delete</string>
    <string name="camera_action">Camera</string>
    <string name="capture_card">Capture Score Card</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="error_title">Error</string>
    <string name="retry_action">Retry</string>
    <string name="capture_action">Capture</string>
    <string name="processing_image">Processing image...</string>
    <string name="camera_permission_required">Camera permission required</string>
    <string name="camera_permission_message">To capture score card images, please grant camera permission.</string>
</resources>