<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_edit_rider"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit_rider_info"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_clean_rider_scores"
        android:icon="@drawable/ic_remove_rider_scores"
        android:title="@string/clear_rider_scores"
        app:showAsAction="ifRoom" />
</menu>